better layout for security tab

--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.css
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.css
@@ -12,6 +12,10 @@
     -fx-background-color: #dedede;
 }
 
+.data-table .table-cell {
+    -fx-alignment: CENTER;
+}
+
 .table-cell {
     -fx-font-family: monospace;
     -fx-font-weight: bold;
